# linkedin-post

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  linkedin-post-generator-brief.md  pyproject.toml
.claude/commands/: commit.md  next-task.md  pre-commit.md  start-status.md  start-work.md  update-todo.md  workflow.md
.claude/rules/: cli-ux.md  prompts.md  python-style.md  testing.md
linkedin_post_generator/: __init__.py  cli.py
linkedin_post_generator/ai/: __init__.py  api_backend.py  backend.py  cleaner.py  exceptions.py  headless.py  prompt_builder.py
linkedin_post_generator/cli/: __init__.py  config_cmd.py  generate_cmd.py  history_cmd.py  init_cmd.py
linkedin_post_generator/config/: __init__.py  model.py  paths.py  reader.py  writer.py
linkedin_post_generator/fetcher/: __init__.py  detector.py  exceptions.py  github_fetcher.py  models.py  text_input.py  url_fetcher.py
linkedin_post_generator/history/: __init__.py  models.py  store.py
linkedin_post_generator/output/: __init__.py  actions.py  clipboard.py  display.py  file_save.py
linkedin_post_generator/templates/: __init__.py  builder.py  builtins.py  models.py  registry.py
tests/: conftest.py
tests/fixtures/api_responses/: github_repo.json
tests/unit/: test_api_backend.py  test_backend.py  test_builtins.py  test_cleaner.py  test_cli.py  test_config.py  test_detector.py  test_generate_flow.py  test_github_fetcher.py  test_headless.py  test_history.py  test_output.py  test_prompt_builder.py  test_refinement.py  test_selections.py  test_templates.py  test_text_input.py  test_url_fetcher.py
(+1 files in other folders)
